[tool.poetry]
name = "scheduler"
version = "0.1.0"
description = ""
authors = ["yay4ya <yay4ya@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
google-api-python-client = "^1.12.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
python-language-server = "^0.36.2"
pylint = "^2.6.2"
mypy = "^0.800"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
